[gd_scene load_steps=8 format=3 uid="uid://bwse27vewxv3p"]

[ext_resource type="Script" uid="uid://8xux1cpwhjdu" path="res://test/scenarios/physics_server/test_raycast.gd" id="1_0gpf5"]

[sub_resource type="BoxMesh" id="BoxMesh_rltjr"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_rltjr"]
points = PackedVector3Array(0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_0gpf5"]
size = Vector3(1, 1, 3)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_kn4m4"]
points = PackedVector3Array(0.5, 0.5, 1.5, 0.5, -0.5, 1.5, 0.5, 0.5, -1.5, -0.5, 0.5, 1.5, -0.5, -0.5, 1.5, 0.5, -0.5, -1.5, -0.5, 0.5, -1.5, -0.5, -0.5, -1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0gpf5"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_kn4m4"]
material = SubResource("StandardMaterial3D_0gpf5")
radius = 0.1
height = 0.2

[node name="TestRaycast" type="Node3D"]
script = ExtResource("1_0gpf5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="StagPhysicsServer" type="StagPhysicsServer" parent="."]

[node name="body_origin" type="Node3D" parent="."]

[node name="mesh" type="MeshInstance3D" parent="body_origin"]
mesh = SubResource("BoxMesh_rltjr")

[node name="collision" type="CollisionShape3D" parent="body_origin"]
shape = SubResource("ConvexPolygonShape3D_rltjr")

[node name="body_below_origin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0)

[node name="mesh" type="MeshInstance3D" parent="body_below_origin"]
mesh = SubResource("BoxMesh_rltjr")

[node name="collision" type="CollisionShape3D" parent="body_below_origin"]
shape = SubResource("ConvexPolygonShape3D_rltjr")

[node name="body_transformed" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1, 0, -2)

[node name="mesh" type="MeshInstance3D" parent="body_transformed"]
mesh = SubResource("BoxMesh_0gpf5")

[node name="collision" type="CollisionShape3D" parent="body_transformed"]
shape = SubResource("ConvexPolygonShape3D_kn4m4")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, 0.353553, -0.612373, 0, 0.866025, 0.5, 0.707107, -0.353553, 0.612373, -15.2474, 11, 14.2474)
fov = 15.0

[node name="debug_1" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_kn4m4")

[node name="debug_2" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_kn4m4")

[node name="debug_3" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_kn4m4")
